Changelog for Beam-Wire

{{ $NEXT }}

    [Fixed]

    - Fixed child containers not being able to reference local services.
      Now, referencing a service in a child container that also
      references a service in the child container works correctly.

1.022     2018-08-01 22:38:58-05:00 America/Chicago

    [Fixed]

    - Fixed missing minimum Perl version in prereqs. Thanks @manwar!
      [Github #67]

1.021     2018-03-18 12:26:40-05:00 America/Chicago

    [Fixed]

    - Fixed a test failing when file paths have regex metacharacters.
      Thanks @mohawk2!

1.020     2017-05-05 00:21:19-05:00 America/Chicago

    [Added]

    - Objects that compose the Beam::Service role will now get their
      name and the container they came from as attributes to their
      constructor. This allows an object to look up services later if it
      wants to (if, for some reason, those services can't be declared as
      dependencies). [Github #56]

1.019 2016-03-04T04:20:22
 - Stop shipping README.mkdn to CPAN
 - Replace ReadmeMarkdownFromPod with ReadmeAnyFromPod
 - Inject travis markdown stuff in source tree, not build tree.
 - Replace ReadmeFromPod with Readme::Brief
 - Stop copying "README" from "CPAN" to "Source"
 - Filter out the Readme plugin from @Basic
 - Correct apparently backwards POD Link
 - Add -SingleEncoding to weaver config

1.018 2016-02-29T01:30:05Z
 - add better error when object config incomplete
 - fix unprefixed metadata allowed outside the root
 - add debugging info with BEAM_WIRE_DEBUG envvar

1.017 2016-02-28T05:43:50Z
 - add bare services
 - rewrite and expand the documentation

1.016 2016-02-24T23:37:58Z
 - Compose Roles _before_ instantiation so attrs will work in init

1.015 2016-02-23T14:33:00Z
 - remove Build.PL
 - Add META.json to the built dist
 - Avoid using YAML::XS 0.61 where possible
 - fix minimum test prereqs
 - update travis config to test core, hide modules

1.014 2015-11-02T21:22:53Z
 - allow empty hashref in service args